# hokkaido

./: .gitignore  CMakeLists.txt  Cargo.toml  README  README.md  default.nix  example.cub  flake.nix  main  main.cpp  plan.md  shell.nix  test.mylang  test_comp_le_ge.hk  test_fn_params.hk  test_for.hk  test_for2.hk  test_for3.hk  test_for4.hk  test_for5.hk  test_if.hk  test_if2.hk  test_if3.hk  test_ne.hk  test_nested.hk
cubical/: ffi.rs  mod.rs  syntax.rs
cubical/parser/: mod.rs
docs/: cubical_surface_language.md  example-guess.md  syntax-control-flow.md  syntax-data-structures.md  syntax-expressions.md  syntax-ffi-cubical.md  syntax-functions.md  syntax-modules.md  syntax-types.md  syntax.md
src/: lib.rs
src-cpp/: ast.h  codegen.cpp  codegen.h  cubical.cpp  cubical.h  lexer.cpp  lexer.h  main.cpp  parser.cpp  parser.h
src/cubical/: equality.rs  ffi.rs  mod.rs  nbe.rs  syntax.rs
src/cubical/parser/: tests.rs
test/: example.cub  example.hk  example_cffi.hk  guessing_game.hk  test_array.hk  test_array2.hk  test_mod_break.hk  test_shl_and.hk  test_struct.hk  test_struct2.hk
